Add sandbox page

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
 }
 
 .upload-form__button {
-  background-color: blue;
+  background-color: rgb(64, 246, 9);
   color: white;
   padding: 0.5rem 1rem;
   border-radius: 5px;
