--- a/src/components/banner.css
+++ b/src/components/banner.css
@@ -1,11 +1,10 @@
 .banner {
   text-align: center;
-  width: 50%;
+  width: 100%;
   height: 150px;
-  border: 1px solid black;
-  padding: 10px;
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
+  border: 1px solid rgb(64, 246, 9);
+  background-size: 20%;
+  background-repeat: repeat;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
@@ -14,7 +13,6 @@
 .banner button {
   background-color: rgb(64, 246, 9);
   color: white;
-  padding: 10px 10px;
   border-radius: 5px;
   font-size: 16px;
   text-align: center;
